manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rpg-awesome-icons
  namespace: triangular
spec:
  selector:
    matchLabels:
      app: rpg-awesome-icons
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: rpg-awesome-icons
    spec:
      containers:
        - name: rpg-awesome-icons-example-app
          image: registry.akehir.com:443/triangular/rpg-awesome-icons/rpg-awesome-icons-example-app:develop-bbfa2c4e-1783727546 # {"$imagepolicy": "triangular:rpg-awesome-icons-example-app-image-policy"}
          imagePullPolicy: Always
          ports:
            - containerPort: 8811
      imagePullSecrets:
        - name: deploy-triangular
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - arm64
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: module
                    operator: In
                    values:
                      - rpg-awesome-icons
              topologyKey: "kubernetes.io/hostname"
