manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rpg-awesome-icons
  namespace: triangular
spec:
  selector:
    app: rpg-awesome-icons
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8811
---
