manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rpg-awesome-icons-ingress
  namespace: triangular
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  rules:
    - host: rpg-awesome-icons.akehir.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: password-checker
                port:
                  number: 8001
  tls:
    - hosts:
      - rpg-awesome-icons.akehir.com
      secretName: rpg-awesome-icons-akehir-com
